--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 # Wrangler 本地配置文件（包含敏感信息）
 wrangler.local.toml
 .dev.vars
-
+.augment/
+.env
 # Node.js
 node_modules/
 npm-debug.log*
@@ -35,3 +36,4 @@ test_new_architecture.md
 .augment/rules/rules.md
 .cunzhi-memory/metadata.json
 .cunzhi-memory/patterns.md
+.env.example
